# email-files-extractor

./: .gitignore  Cargo.toml  README.md
src/: main.rs  read_s3.rs
