[package]
name = "mht-extractor"
version = "0.1.0"
authors = ["iamsaquib <saquib@distill.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = "0.18.9"
mail_extractor = "0.1.2"
flate2 = "1.0.13"
actix-rt = "1.0.0"
clap = "2.33.0"