[package]
name = "mail_extractor_binary"
version = "0.1.2"
authors = ["iamsaquib <saquib@distill.io>"]
edition = "2018"
description = """
    A file extractor to extract files out of email files and store them locally
"""
license = "MIT"
repository = "https://github.com/distill-io/email-files-extractor"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mail_extractor = "0.1.3"
clap = "2.33.0"